--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
     </div>
   </footer>
   <script>document.getElementById('y').textContent = new Date().getFullYear()</script>
-  <script src="../dist/logline-kernel.browser.js"></script>
-  <script src="../dist/demo.js" defer></script>
+  <script src="dist/logline-kernel.browser.js"></script>
+  <script src="dist/demo.js" defer></script>
 </body>
 </html>
